# autotube

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/src/: dev.ipynb  manage.py  prompts.py  pytest.ini  sample.json  sample_out.xml  server.py  transcript.txt
backend/src/app/: __init__.py  config.py  search.py  search_tools.py
backend/src/app/server/: api.py  api_errors.py  app_blueprints.py  app_context.py
backend/src/app/util/: web_cache.py
frontend/: .eslintrc.json  .gitignore  .prettierignore  .prettierrc  README.md  env.template  next.config.js  package-lock.json  package.json  relay.config.json  tsconfig.json
frontend/src/: RelayEnvironment.ts  config.ts  relay-types.ts
frontend/src/api/: backendApi.ts  sampleData.ts  types.ts
frontend/src/graphql/utils/: graphqlTools.ts
frontend/src/layout/components/: ColumnGroup.tsx  Layout.tsx  NavBar.tsx  NavButton.tsx  Sidebar.tsx
frontend/src/overview/: Overview.tsx
frontend/src/overview/components/: BoxFrame.tsx  Category.tsx  Overview.tsx  VideoList.tsx
frontend/src/pages/: _app.tsx  home.tsx  index.tsx
frontend/src/pages/api/: [...proxy].ts
frontend/src/styles/css/: globals.css
frontend/src/styles/utils/: theme.tsx
frontend/src/utils/: comparisonChain.spec.ts  comparisonChain.ts  logPerf.ts  simpleHash.ts  slugify.ts  typeTools.ts  urlTools.ts
hasura/: config.yaml  env.template
